welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:16: error: not found: value public
public void run() {
^PictureMono1:16: error: Unit does not take parameters
public void run() {
                  ^