welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
def faireV(){
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  avance()
  baisseBrosse()
	leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
}

public void run() {
	for(compteur <- 1 to 4){
  	avance(2);
		faireV();
		avance(2);	
   	gauche();}
}